# clock

./: .clangd  .gitignore  CMakeLists.txt  clock.ino  clock.jdebug  openocd.cfg  platformio.ini  rawclock.jdebug
.cache/clangd/index/: ac.h.F62F68621F2D4CEC.idx  aes.h.0412CD5B1E9EEFD5.idx  aes.h.FE00F622B4EDCB7D.idx  cmcc.h.D7D8913117CDFCCD.idx  cmsis_version.h.84A0FA9B66931AE6.idx  dac.h.CF7F14C687D862CF.idx  dmac.h.E90EC9D1780D8C2B.idx  dsu.h.668D142AA796AE41.idx  dsu.h.C848300CB420E727.idx  evsys.h.0739E2012B90214C.idx  evsys.h.89023845FF2A232C.idx  gclk.h.098851E99C23B068.idx  gclk.h.A97EAEC82A26D021.idx  hmatrix.h.4D7A9F46C2FF91DE.idx  i2s.h.A542A801BBA11DD7.idx  main.cpp.D1C41D56C8E180B5.idx  nvmctrl.h.005869BCC1524EBC.idx  nvmctrl.h.C24B4584E2876ABA.idx  osc32kctrl.h.86448985D156FE26.idx  osc32kctrl.h.C344C337875EB80E.idx  oscctrl.h.2DF31783197C41FA.idx  pac.h.272737EEC8F28787.idx  pcc.h.CCE41AAC48F9196B.idx  pdec.h.421E13F2FD178A6C.idx  pdec.h.A99D9B3F3E2374BD.idx  pm.h.76DFB84ACB8B619D.idx  pm.h.7E30AB429691BDE1.idx  port.h.0C4D4847E4C8FE43.idx  port.h.93FC3EEC31966B89.idx  qspi.h.1DCFF3380CEFC86B.idx  ramecc.h.8E3FA90033BBCA60.idx  rstc.h.1A290BF1CCAE3DF1.idx  rtc.h.1CFBAE16D3CF8DC0.idx  samd51j20a.h.71F10E3A4B7F5830.idx  sdhc.h.94221A1D6C4DB9FF.idx  sercom.h.0B24F11E94394166.idx  sercom0.h.DEB053D74C605595.idx  startup_samd51.c.08B3CA46F47EF52E.idx  supc.h.599024F11CAAFD31.idx  system_samd51.h.443E8B447A8FA98B.idx  (+11 more)
cmake/: CMakeLists.txt  arm-none-eabi.cmake  build.sh  flash.jlink  upload.sh
docs/: compile_commands.json
samd51/: samd51j20a.h  startup_samd51.c
samd51/CMSIS/: core_cm4.h
samd51/DFP/linker/: samd51j20a_flash.ld
samd51/DFP/src/: startup_samd51j20a.c  startup_samd51j20a.cpp
samd51/cmsis/: cmsis_compiler.h  core_cm4.h
samd51/include/: samd51.h  samd51j20a.h
samd51/linker/: samd51j20a_flash.ld
src/: display.cpp  draw.cpp  font.cpp  i2c.cpp  main.cpp  rtc.cpp  setup_tc0.cpp  setup_tc3.cpp  setup_tc5.cpp  transcode.cpp
src/include/: display.hpp  draw.hpp  font.hpp  i2c.hpp  louie.hpp  rtc.hpp  setup_tc0.hpp  setup_tc3.hpp  setup_tc5.hpp  transcode.hpp  utility.hpp
temp/: d3
