set(LINKER_FILEPATH ${CMAKE_CURRENT_SOURCE_DIR}/samd51/linker/samd51j20a_flash.ld)
cmake_minimum_required(VERSION 3.25)
include_guard()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_COMPILER             "/usr/bin/arm-none-eabi-g++")
# set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-mthumb -mcpu=cortex-m4 -specs=nosys.specs -Wl,--gc-sections -O0 -ggdb )
add_link_options(-specs=nosys.specs  -T ${LINKER_FILEPATH} -mthumb -mcpu=cortex-m4 )
set(CMAKE_C_COMPILER_FORCED ON)
set(CMAKE_CXX_COMPILER_FORCED ON)
SET (CMAKE_C_COMPILER             "/usr/bin/arm-none-eabi-gcc")
SET (CMAKE_AR      "/usr/bin/arm-none-eabi-ar")
SET (CMAKE_LINKER  "/usr/bin/arm-none-eabi-ld")
SET (CMAKE_NM      "/usr/bin/arm-none-eabi-nm")
SET (CMAKE_OBJDUMP "/usr/bin/arm-none-eabi-objdump")
SET (CMAKE_RANLIB  "/usr/bin/arm-none-eabi-ranlib")
project(rawclock VERSION 1.0
    DESCRIPTION ""
    LANGUAGES C CXX)
file(GLOB STARTUP "samd51/startup*")
file(GLOB SOURCES "src/*.cpp")

include_directories(samd51/ src/include)
set(exe_name ${CMAKE_PROJECT_NAME} )
string(CONCAT exe_name ${exe_name} .exe)
message(${exe_name})
add_executable(${exe_name} ${SOURCES} ${STARTUP})

